# MCP-compatibility-paper

./: .gitignore  batch1_python.json  compliance_csharp_1.json  compliance_csharp_3.json  compliance_go_1.json  compliance_go_3.json  compliance_java_1.json  compliance_java_2.json  compliance_kotlin_1.json  compliance_kotlin_2.json  compliance_kotlin_3.json  compliance_php_1.json  compliance_php_3.json  compliance_python_1.json  compliance_python_2.json  compliance_python_3.json  compliance_report_python_v1.json  compliance_ruby_1.json  compliance_ruby_3.json  compliance_rust_1.json  compliance_rust_2.json  compliance_swift_1.json  compliance_swift_2.json  compliance_typescript_1.json  compliance_typescript_2.json  compliance_typescript_3.json  compliant_rules_v1.json  disobey_results.txt  func_aliases.json  mcp_llm_cleaned_rules.json  non_compliant_rules_v1.json  progress_results.jsonl  requirements.txt  result.json  test_prompt_generation.py
python-sdk-main/python-sdk-main/: .git-blame-ignore-revs  .gitattribute  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  ISSUE_TOOL_LIST_CHANGED_NOTIFICATION.md  README.md  RELEASE.md  pyproject.toml
python-sdk-main/python-sdk-main/.github/: CODEOWNERS
python-sdk-main/python-sdk-main/.github/ISSUE_TEMPLATE/: bug.yaml  feature-request.yaml  question.yaml
python-sdk-main/python-sdk-main/.github/workflows/: publish-docs-manually.yml  publish-pypi.yml  shared.yml
python-sdk-main/python-sdk-main/docs/: api.md  index.md
python-sdk-main/python-sdk-main/examples/: README.md
python-sdk-main/python-sdk-main/examples/clients/simple-auth-client/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/clients/simple-chatbot/: README.MD  pyproject.toml
python-sdk-main/python-sdk-main/examples/fastmcp/: complex_inputs.py  desktop.py  echo.py  icons_demo.py  logging_and_progress.py  memory.py  parameter_descriptions.py  readme-quickstart.py  screenshot.py  simple_echo.py  text_me.py  unicode_example.py  weather_structured.py
python-sdk-main/python-sdk-main/examples/servers/: structured_output_lowlevel.py
python-sdk-main/python-sdk-main/examples/servers/simple-auth/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/servers/simple-pagination/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/servers/simple-prompt/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/servers/simple-resource/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/servers/simple-streamablehttp/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/servers/simple-streamablehttp-stateless/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/servers/simple-tool/: README.md  pyproject.toml
python-sdk-main/python-sdk-main/examples/snippets/: pyproject.toml
python-sdk-main/python-sdk-main/examples/snippets/clients/: completion_client.py  display_utilities.py  oauth_client.py  pagination_client.py  parsing_tool_results.py  stdio_client.py  streamable_basic.py
python-sdk-main/python-sdk-main/examples/snippets/servers/: __init__.py  basic_prompt.py  basic_resource.py  basic_tool.py  completion.py  direct_execution.py  elicitation.py  fastmcp_quickstart.py  images.py  lifespan_example.py  notifications.py  oauth_server.py  pagination_example.py  sampling.py  streamable_config.py  streamable_http_basic_mounting.py  streamable_http_host_mounting.py  streamable_http_multiple_servers.py  streamable_http_path_config.py  streamable_starlette_mount.py  structured_output.py  tool_progress.py
python-sdk-main/python-sdk-main/scripts/: update_readme_snippets.py
python-sdk-main/python-sdk-main/src/mcp/: __init__.py  types.py
python-sdk-main/python-sdk-main/src/mcp/cli/: __init__.py  claude.py  cli.py
python-sdk-main/python-sdk-main/src/mcp/client/: __main__.py  auth.py  session.py  session_group.py  sse.py  streamable_http.py  websocket.py
python-sdk-main/python-sdk-main/src/mcp/os/: __init__.py
python-sdk-main/python-sdk-main/src/mcp/server/: __init__.py  __main__.py  elicitation.py  models.py  session.py  sse.py  stdio.py  streamable_http.py  streamable_http_manager.py  streaming_asgi_transport.py  transport_security.py  websocket.py
python-sdk-main/python-sdk-main/src/mcp/shared/: _httpx_utils.py  auth.py  auth_utils.py  context.py  exceptions.py  memory.py  message.py  metadata_utils.py  progress.py  session.py  version.py
python-sdk-main/python-sdk-main/tests/: conftest.py  test_examples.py  test_types.py
python-sdk-main/python-sdk-main/tests/cli/: test_utils.py
python-sdk-main/python-sdk-main/tests/client/: conftest.py  test_auth.py  test_config.py  test_http_unicode.py  test_list_methods_cursor.py  test_list_roots_callback.py  test_logging_callback.py  test_notification_response.py  test_output_schema_validation.py  test_resource_cleanup.py  test_sampling_callback.py  test_session.py  test_session_group.py  test_stdio.py
python-sdk-main/python-sdk-main/tests/issues/: test_100_tool_listing.py  test_1027_win_unreachable_cleanup.py  test_129_resource_templates.py  test_1338_icons_and_metadata.py  test_141_resource_templates.py  test_152_resource_mime_type.py  test_176_progress_token.py  test_188_concurrency.py  test_192_request_id.py  test_342_base64_encoding.py  test_355_type_error.py  test_552_windows_hang.py  test_88_random_error.py  test_malformed_input.py
python-sdk-main/python-sdk-main/tests/server/: test_cancel_handling.py  test_completion_with_context.py  test_lifespan.py  test_lowlevel_input_validation.py  test_lowlevel_output_validation.py  test_lowlevel_tool_annotations.py  test_read_resource.py  test_session.py  test_sse_security.py  test_stdio.py  test_streamable_http_manager.py  test_streamable_http_security.py
python-sdk-main/python-sdk-main/tests/shared/: test_auth.py  test_auth_utils.py  test_httpx_utils.py  test_memory.py  test_progress_notifications.py  test_session.py  test_sse.py  test_streamable_http.py  test_win32_utils.py  test_ws.py
scripts/: auto_llm_compliance_checker.py  build_lang.py  (+16 more)
(+1289 files in other folders)
